Small updates to run final test

--- a/Combine_en_task3.ipynb
+++ b/Combine_en_task3.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "a35c9cb1",
+   "execution_count": 17,
+   "id": "abab6f97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +14,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "bd3d814c",
+   "execution_count": 18,
+   "id": "4d34e46a",
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
        " 'Whataboutism']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,8 +57,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "2f3a399c",
+   "execution_count": 19,
+   "id": "8c58268b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,26 +73,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7d962cc7",
+   "execution_count": 37,
+   "id": "97dedffb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Appeal_to_Hypocrisy', 'Appeal_to_Popularity', 'Appeal_to_Time',\n",
+       "       'Appeal_to_Values', 'Consequential_Oversimplification',\n",
+       "       'Conversation_Killer', 'Guilt_by_Association',\n",
+       "       'Obfuscation-Vagueness-Confusion', 'Questioning_the_Reputation',\n",
+       "       'Red_Herring', 'Straw_Man', 'Whataboutism'], dtype='<U32')"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "id_fews = [2,3,4,5,7,8,11,13,16,17,18,21,22]\n",
+    "# removed false dillema training sze with dev is 185, under 150:\n",
+    "id_fews = [2,3,4,5,7,8,13,16,17,18,21,22]\n",
     "id2label = {idx:label for idx, label in enumerate(TASK3_LABELS)}\n",
     "np.array(TASK3_LABELS)[id_fews]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "555c0b75",
+   "execution_count": 38,
+   "id": "8db3988d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_mul = pd.read_csv('Newpred_en1.txt', sep='\\t', header=None, names=['id','line','labels'])\n",
+    "df_mul = pd.read_csv('Test_task3_en_xlm.txt', sep='\\t', header=None, names=['id','line','labels'])\n",
     "#df_anchor = pd.read_csv('anchor_small_task3_en.txt', sep='\\t', header=None, names=['id','line','labels']) #majority_pred_en.csv\n",
-    "df_rob = pd.read_csv('Newpred_en_rob.txt', sep='\\t', header=None, names=['id','line','labels'])\n",
+    "df_rob = pd.read_csv('Test_task3_en_rob.txt', sep='\\t', header=None, names=['id','line','labels'])\n",
     "#df_anchor_s = pd.read_csv('majority_pred_en.csv', sep='\\t', header=None, names=['id','line','labels'])\n",
     "matrix_mul1 = to_matrix(df_mul)\n",
     "matrix_rob1 = to_matrix(df_rob)"
@@ -100,48 +116,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "96505587",
+   "execution_count": 39,
+   "id": "cc31c865",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 44,  86,   3,  13,   0,   0,  26,   0,   4,  92,  61,  21,  84,\n",
+       "         3, 311, 145,   1,   0,   6, 116,  31,   0,   0])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sum(matrix_mul1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7caa0da8",
+   "execution_count": 40,
+   "id": "33f00e26",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  7,  65,   0,   3,   0,   0,  12,   0,  13,  94,  59,  10,  75,\n",
+       "         1, 287, 101,   0,   0,   0, 103,  19,   0,   0])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sum(matrix_rob1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9f734a8f",
+   "execution_count": 41,
+   "id": "c3676ad2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  3,  0,  0,  0, 13,  1,  0,  0,  0,  0,  0])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sum(matrix_rob1>0)[id_fews]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a4283531",
+   "execution_count": 42,
+   "id": "bb291ac8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 3, 13,  0,  0,  0,  4,  3,  1,  0,  6,  0,  0])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sum(matrix_mul1>0)[id_fews]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "53675ce2",
+   "execution_count": 43,
+   "id": "cf6ecedd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,35 +218,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6c4972fe",
+   "execution_count": 44,
+   "id": "33e5a6e9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([910, 910, 907, 898, 910, 910, 910, 910, 897, 910, 910, 910, 910,\n",
+       "       906, 910, 910, 909, 910, 904, 910, 910, 910, 910])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sum(matrix_com == matrix_rob1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "86fc2540",
+   "execution_count": 45,
+   "id": "69217dda",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([867, 835, 910, 910, 910, 910, 880, 910, 910, 804, 854, 887, 881,\n",
+       "       910, 758, 820, 910, 910, 910, 765, 886, 910, 910])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sum(matrix_com == matrix_mul1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6eb34dd4",
+   "execution_count": 46,
+   "id": "6f2f770f",
    "metadata": {},
    "outputs": [],
    "source": [
     "pred_com=pd.Series(list(matrix_com))\n",
     "series_labels=pred_com.apply(lambda x: [id2label[i] for i in np.where(x==1)[0]])\n",
     "df_rob['labels_pred']=series_labels.apply(lambda x: ','.join(x))\n",
-    "output_pred_file= 'Newcombine_std_xlm.txt'\n",
+    "output_pred_file= 'Test_task3_en.txt'\n",
     "        \n",
     "df_rob[['id','line','labels_pred']].to_csv(output_pred_file, sep='\\t', header=None, index=None)"
    ]
@@ -192,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4b42670",
+   "id": "21d88cb2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -200,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bf3f35d",
+   "id": "4c55eecb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -208,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d86b43c",
+   "id": "dd36fb00",
    "metadata": {},
    "outputs": [],
    "source": [
