--- a/Data_exploration-DEV_train.ipynb
+++ b/Data_exploration-DEV_train.ipynb
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 46,
    "id": "c023c0b2",
    "metadata": {},
    "outputs": [],
@@ -313,7 +313,7 @@
     "    plt.show()\n",
     "    print(dfl.sum())\n",
     "    print(dfl.sum().index)\n",
-    "    print(dfl.sum()[dfl.sum()<50].index)\n",
+    "    print(dfl.sum()[dfl.sum()<100].index)\n",
     "    corr = dfl.corr()\n",
     "    ax = sns.heatmap(\n",
     "        corr, \n",
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 47,
    "id": "1840736c",
    "metadata": {},
    "outputs": [
@@ -361,8 +361,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "447it [00:00, 7760.77it/s]\n",
-      "90it [00:00, 5755.17it/s]\n"
+      "447it [00:00, 1189.56it/s]\n",
+      "90it [00:00, 2199.77it/s]\n"
      ]
     }
    ],
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 48,
    "id": "e5a5b767",
    "metadata": {},
    "outputs": [
@@ -382,7 +382,7 @@
        "(4887, 3)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,8 +393,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "23423de5",
+   "execution_count": 49,
+   "id": "32c9ac1c",
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
        "          13             Repetition   en  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 50,
    "id": "abd5765d",
    "metadata": {},
    "outputs": [
@@ -556,8 +556,9 @@
       "       'Obfuscation-Vagueness-Confusion', 'Red_Herring', 'Repetition',\n",
       "       'Slogans', 'Straw_Man', 'Whataboutism'],\n",
       "      dtype='object')\n",
-      "Index(['Appeal_to_Hypocrisy', 'Appeal_to_Popularity',\n",
-      "       'Obfuscation-Vagueness-Confusion', 'Straw_Man', 'Whataboutism'],\n",
+      "Index(['Appeal_to_Hypocrisy', 'Appeal_to_Popularity', 'Guilt_by_Association',\n",
+      "       'Obfuscation-Vagueness-Confusion', 'Red_Herring', 'Straw_Man',\n",
+      "       'Whataboutism'],\n",
       "      dtype='object')\n"
      ]
     },
@@ -581,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "207ebddc",
+   "id": "e8d36556",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "eba4e7a4",
+   "id": "0b95bf37",
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "003a0b36",
+   "id": "9a7aad74",
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38390420",
+   "id": "e6c41def",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -771,7 +772,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "f7a31af8",
+   "id": "3c7e1491",
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +869,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "5ec971ea",
+   "id": "74d08d5e",
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +895,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "1df5a557",
+   "id": "e46bd59b",
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +982,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76ebb8bb",
+   "id": "9151932e",
    "metadata": {},
    "outputs": [],
    "source": []
