--- a/Combine_en_task3.ipynb
+++ b/Combine_en_task3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "abab6f97",
    "metadata": {},
    "outputs": [],
@@ -15,6 +15,66 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "d5bda498",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "li=os.listdir('data_folder')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "f423e4e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['hjbaselines',\n",
+       " 'hjdata',\n",
+       " 'hjdata.zip',\n",
+       " 'hjreadme',\n",
+       " 'hjrequirements.txt',\n",
+       " 'hjscorers',\n",
+       " 'hjsemeval2023task3bundle-v2(1).tar',\n",
+       " 'hjsemeval2023task3bundle-v2(1).tgz']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "['hj' + l for l in li]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "8c3b8c24",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hj\\\\hj'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.path.join('hj', 'hj')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "4d34e46a",
    "metadata": {},
    "outputs": [
@@ -46,7 +106,7 @@
        " 'Whataboutism']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "8c58268b",
    "metadata": {},
    "outputs": [],
@@ -73,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "id": "97dedffb",
    "metadata": {},
    "outputs": [
@@ -87,7 +147,7 @@
        "       'Red_Herring', 'Straw_Man', 'Whataboutism'], dtype='<U32')"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,12 +161,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "id": "8db3988d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_mul = pd.read_csv('Test_task3_en_xlm.txt', sep='\\t', header=None, names=['id','line','labels'])\n",
+    "df_mul = pd.read_csv('Test_1en_task3_en.txt', sep='\\t', header=None, names=['id','line','labels'])\n",
     "#df_anchor = pd.read_csv('anchor_small_task3_en.txt', sep='\\t', header=None, names=['id','line','labels']) #majority_pred_en.csv\n",
     "df_rob = pd.read_csv('Test_task3_en_rob.txt', sep='\\t', header=None, names=['id','line','labels'])\n",
     "#df_anchor_s = pd.read_csv('majority_pred_en.csv', sep='\\t', header=None, names=['id','line','labels'])\n",
@@ -116,18 +176,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 26,
+   "id": "1591a89f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id         3116\n",
+       "line          1\n",
+       "labels    Doubt\n",
+       "Name: 0, dtype: object"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_mul.iloc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "cc31c865",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 44,  86,   3,  13,   0,   0,  26,   0,   4,  92,  61,  21,  84,\n",
-       "         3, 311, 145,   1,   0,   6, 116,  31,   0,   0])"
+       "array([ 47,  83,   2,  15,   0,   0,  14,   0,   9,  94,  62,  19,  85,\n",
+       "         3, 307, 128,   4,   1,   2, 123,  26,   0,   0])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "id": "33f00e26",
    "metadata": {},
    "outputs": [
@@ -149,7 +233,7 @@
        "         1, 287, 101,   0,   0,   0, 103,  19,   0,   0])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "id": "c3676ad2",
    "metadata": {},
    "outputs": [
@@ -170,7 +254,7 @@
        "array([ 0,  3,  0,  0,  0, 13,  1,  0,  0,  0,  0,  0])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,17 +265,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "id": "bb291ac8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 3, 13,  0,  0,  0,  4,  3,  1,  0,  6,  0,  0])"
+       "array([ 2, 15,  0,  0,  0,  9,  3,  4,  1,  2,  0,  0])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "id": "cf6ecedd",
    "metadata": {},
    "outputs": [],
@@ -218,18 +302,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "id": "33e5a6e9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([910, 910, 907, 898, 910, 910, 910, 910, 897, 910, 910, 910, 910,\n",
-       "       906, 910, 910, 909, 910, 904, 910, 910, 910, 910])"
+       "array([910, 910, 908, 898, 910, 910, 910, 910, 898, 910, 910, 910, 910,\n",
+       "       906, 910, 910, 906, 909, 908, 910, 910, 910, 910])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,18 +324,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "id": "69217dda",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([867, 835, 910, 910, 910, 910, 880, 910, 910, 804, 854, 887, 881,\n",
-       "       910, 758, 820, 910, 910, 910, 765, 886, 910, 910])"
+       "array([868, 834, 910, 910, 910, 910, 892, 910, 910, 806, 853, 889, 876,\n",
+       "       910, 758, 823, 910, 910, 910, 768, 891, 910, 910])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "id": "6f2f770f",
    "metadata": {},
    "outputs": [],
@@ -293,16 +377,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "dd36fb00",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  7,  65,   2,  15,   0,   0,  12,   0,   9,  94,  59,  10,  75,\n",
+       "         3, 287, 101,   4,   1,   2, 103,  19,   0,   0])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# tjek the new\n",
     "df_com = pd.read_csv(output_pred_file, sep='\\t', header=None, names=['id','line','labels'])\n",
     "matrix_com1 = to_matrix(df_com)\n",
     "sum(matrix_com1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39286ff6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
