--- a/Data_exploration-DEV_train.ipynb
+++ b/Data_exploration-DEV_train.ipynb
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 26,
    "id": "c023c0b2",
    "metadata": {},
    "outputs": [],
@@ -313,7 +313,7 @@
     "    plt.show()\n",
     "    print(dfl.sum())\n",
     "    print(dfl.sum().index)\n",
-    "    print(dfl.sum()[dfl.sum()<100].index)\n",
+    "    print(dfl.sum()[dfl.sum()<50].index)\n",
     "    corr = dfl.corr()\n",
     "    ax = sns.heatmap(\n",
     "        corr, \n",
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 57,
    "id": "1840736c",
    "metadata": {},
    "outputs": [
@@ -361,28 +361,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "447it [00:00, 1189.56it/s]\n",
-      "90it [00:00, 2199.77it/s]\n"
+      "454it [00:00, 2361.57it/s]\n",
+      "152it [00:00, 2843.44it/s]\n"
      ]
     }
    ],
    "source": [
-    "df_en = creat_task3_multi(['en'])"
+    "df_en = creat_task3_multi(['it'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 58,
    "id": "e5a5b767",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(4887, 3)"
+       "(4688, 3)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 59,
    "id": "32c9ac1c",
    "metadata": {},
    "outputs": [
@@ -433,59 +433,59 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">111111111</th>\n",
-       "      <th>3</th>\n",
-       "      <td>Geneva - The World Health Organisation chief o...</td>\n",
-       "      <td>Doubt</td>\n",
-       "      <td>en</td>\n",
+       "      <th rowspan=\"5\" valign=\"top\">261</th>\n",
+       "      <th>1</th>\n",
+       "      <td>Lo strano silenzio dei no-lockdown</td>\n",
+       "      <td>Doubt,Name_Calling-Labeling</td>\n",
+       "      <td>it</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Lo strano silenzio dei no-lockdown</td>\n",
+       "      <td>Doubt,Name_Calling-Labeling</td>\n",
+       "      <td>it</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Geneva - The World Health Organisation chief o...</td>\n",
-       "      <td>Doubt</td>\n",
-       "      <td>en</td>\n",
+       "      <td>​Ventisei milioni di cittadini chiusi in casa....</td>\n",
+       "      <td>Loaded_Language</td>\n",
+       "      <td>it</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>​Ventisei milioni di cittadini chiusi in casa....</td>\n",
+       "      <td>Loaded_Language</td>\n",
+       "      <td>it</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>\"The next transmission could be more pronounce...</td>\n",
-       "      <td>Appeal_to_Authority</td>\n",
-       "      <td>en</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>\"The next transmission could be more pronounce...</td>\n",
-       "      <td>Appeal_to_Authority</td>\n",
-       "      <td>en</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>But Tedros voiced alarm that \"plague in Madaga...</td>\n",
-       "      <td>Repetition</td>\n",
-       "      <td>en</td>\n",
+       "      <td>Ventisei milioni di cittadini chiusi in casa. ...</td>\n",
+       "      <td>Appeal_to_Popularity,Appeal_to_Values,Conversa...</td>\n",
+       "      <td>it</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                             text  \\\n",
-       "id        line                                                      \n",
-       "111111111 3     Geneva - The World Health Organisation chief o...   \n",
-       "          3     Geneva - The World Health Organisation chief o...   \n",
-       "          5     \"The next transmission could be more pronounce...   \n",
-       "          5     \"The next transmission could be more pronounce...   \n",
-       "          13    But Tedros voiced alarm that \"plague in Madaga...   \n",
+       "                                                       text  \\\n",
+       "id  line                                                      \n",
+       "261 1                   Lo strano silenzio dei no-lockdown    \n",
+       "    1                   Lo strano silenzio dei no-lockdown    \n",
+       "    3     ​Ventisei milioni di cittadini chiusi in casa....   \n",
+       "    3     ​Ventisei milioni di cittadini chiusi in casa....   \n",
+       "    5     Ventisei milioni di cittadini chiusi in casa. ...   \n",
        "\n",
-       "                             labels lang  \n",
-       "id        line                            \n",
-       "111111111 3                   Doubt   en  \n",
-       "          3                   Doubt   en  \n",
-       "          5     Appeal_to_Authority   en  \n",
-       "          5     Appeal_to_Authority   en  \n",
-       "          13             Repetition   en  "
+       "                                                     labels lang  \n",
+       "id  line                                                          \n",
+       "261 1                           Doubt,Name_Calling-Labeling   it  \n",
+       "    1                           Doubt,Name_Calling-Labeling   it  \n",
+       "    3                                       Loaded_Language   it  \n",
+       "    3                                       Loaded_Language   it  \n",
+       "    5     Appeal_to_Popularity,Appeal_to_Values,Conversa...   it  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 45,
    "id": "abd5765d",
    "metadata": {},
    "outputs": [
@@ -556,9 +556,8 @@
       "       'Obfuscation-Vagueness-Confusion', 'Red_Herring', 'Repetition',\n",
       "       'Slogans', 'Straw_Man', 'Whataboutism'],\n",
       "      dtype='object')\n",
-      "Index(['Appeal_to_Hypocrisy', 'Appeal_to_Popularity', 'Guilt_by_Association',\n",
-      "       'Obfuscation-Vagueness-Confusion', 'Red_Herring', 'Straw_Man',\n",
-      "       'Whataboutism'],\n",
+      "Index(['Appeal_to_Hypocrisy', 'Appeal_to_Popularity',\n",
+      "       'Obfuscation-Vagueness-Confusion', 'Straw_Man', 'Whataboutism'],\n",
       "      dtype='object')\n"
      ]
     },
